categories array in component

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>my-project</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="bootstrap.min.css">
   </head>
   <body>
     <div id="app">
@@ -12,7 +13,7 @@
         <router-link to='/app'>+Приложение</router-link>
         <router-link to='/blog'>+Блог</router-link>
       </nav>
-      <router-view></router-view>
+        <router-view></router-view>
     </div>
     <script src="/dist/build.js"></script>
   </body>
